<?xml version="1.0" encoding="UTF-8"?>
<resources>

    <string name="app_name">QRContact</string>
    <string name="app_picker_name">Applications</string>
    <string name="my_qrcontact">My QRContact</string>
    <string name="share_my_qrcontact">Share My QRContact</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name:</string>
    <string name="qrcontact_reader">QRContact Reader</string>
    <string name="surname">Surname:</string>
    <string name="number">Number:</string>
    <string name="email">Email:</string>
    <string name="save">Save</string>
    <string name="contact_added_message">Contact Added Successfully</string>
    <string name="contact_added_error_message">Contact Added Unsuccessfully</string>
    <string name="contact_added_exists_message">Contact Already Exists</string>
    <string name="contact_added_update_message">Contact Updated Successfully</string>
    <string name="contact_added_title">Contact Add</string>
    <string name="contact_delete_message">Do you want to delete this contact?</string>
    <string name="call">Call</string>
    <string name="share">Share</string>
    <string name="edit">Edit</string>
    <string name="sms">Send SMS</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="succes_saved">Saved</string>
    <string name="email_check">Email is not valid!</string>
    <string name="no_data">You don\'t have any data to share</string>
    <string name="contact_delete_title">Contact Delete</string>
    <string name="contact_option_title">Options</string>
    <string name="dialog_email">Email</string>
    <string name="search_">Search Contact</string>
    <string name="loading">Loading</string>
    <string name="loading_contacts">Loading Contact</string>
    
    <string name="fields_required">All Fields Required.</string>

</resources>