<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical" >

    <Button
        android:id="@+id/dialog_call"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/call" />

    <Button
        android:id="@+id/dialog_sms"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sms" />

    <Button
        android:id="@+id/dialog_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_email" />

    <Button
        android:id="@+id/dialog_share"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/share" />

    <Button
        android:id="@+id/dialog_edit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit" />

    <Button
        android:id="@+id/dialog_delete"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete" />

</LinearLayout>